# pinephone-toolkit

./: README.md  meson.build
src/: backlight.c  cpu-sleep.c  led.c  vibrate.c
